2001-10-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h:  Removed old comment about using SCM_CAR to access
	non-pair cells.

	(SCM_MOST_POSITIVE_FIXNUM, SCM_MOST_NEGATIVE_FIXNUM):  Make sure
	the return value is signed.  Thanks to Brian Crowder for the bug
	report.

	(SCM_SRS):  Avoid unnecessary casting and don't unpack input
	values.  With this patch, SCM_SRS can be safely used for other
	types than scm_t_signed_bits.  However, it should still better be
	an internal macro and thus be renamed to SCM_I_SRS.

	(SCM_MAKINUM, SCM_INUM):  Use proper casting.

2001-10-03  Gary Houston  <ghouston@arglist.com>

	* continuations.h, unif.h: in the descriptions of the bit patterns
	of the heap cells, make bit 0 the least significant.

2001-09-25  Thien-Thi Nguyen  <ttn@glug.org>

	* chars.h (SCM_MAKE_CHAR): Use `scm_t_bits' instead of `intptr_t'.
	Thanks to Golubev I. N.

2001-09-25  Gary Houston  <ghouston@arglist.com>

	* ports.c (scm_drain_input): extended the docstring.  thanks to
	Alex Schroeder and Thien-Thi Nguyen.

2001-09-23  Mikael Djurfeldt  <mdj@linnaeus>

	* validate.h (SCM_NUM2FLOAT, SCM_NUM2DOUBLE,
	SCM_VALIDATE_FLOAT_COPY, SCM_VALIDATE_DOUBLE_COPY): New
	macros. (The NUM names might soon change.)

	* numbers.h: Added missing declarations.

2001-09-22  Mikael Djurfeldt  <mdj@linnaeus>

	* Makefile.am: Distribute num2float.i.c.

	* num2float.i.c: New file, multiply included by numbers.c, used
	to "templatize" the float <-> num conversion routines.

	* numbers.c: New functions: scm_num2float, scm_float2num,
	scm_num2double, scm_double2num.

2001-09-21  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: really add version.h

	* strings.h (SCM_SET_STRING_LENGTH): coerce "l" to a long.
	Otherwise it fails on the alpha.  However, we might rather choose
	this size conditionally.

	* numbers.c (scm_gcd): change "k" to a long from an int.
	Otherwise it fails on the alpha.  However, we might rather choose
	this size conditionally.
